# TightFileTransfer

./: CMakeLists.txt  README.md  create_data.sh  data.txt  file2send  loop.sh  queue.c  queue.h  tft_client.c  tft_client.toml  tft_server.c  tft_server.toml
